# acg-practice

./: .gitignore  LICENSE  README.md  default.nix  logger_colors.json  main.tf  pyproject.toml
kinesis/: 2-build-and-publish-layer.sh  README.md  cloudwatch_log_group.tf  colored_loggers.py  iam_policy.tf  iam_role.tf  kinesis_firehose_delivery_stream.tf  kinesis_producer.py  lambda_function.py
ml/: iam_role.tf  ufo.py
scripts/: CLOUD-SHELL.md  get-keys.sh
src/acg_practice/: __init__.py
terraform/ec2/: README.md  ansible.cfg  config.yml  create-ec2-from-cloudshell.sh  inventory.yml  main.tf  playbook.yml  shell.nix  user_data.sh  variables.tf
terraform/ec2/ansible/: Dockerfile  compose.yml  entrypoint.sh  inventory.yml  learn.aws_ec2.yml
terraform/kinesis/: 2-build-and-publish-layer.sh  README.md  account_id_data.tf  colored_loggers.py  iam_policy.tf  main.tf  s3_bucket.tf
