[project]
name = "acg-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "jtele2" }]
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.4.0",
    "boto3>=1.38.3",
    "botocore>=1.38.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ansible-dev-tools>=25.4.0",
    "ansible-lint>=25.2.1",
    "pip>=25.0.1",
]
